src/SIL.XForge.Scripture/ClientApp/src/app/settings/settings.component.scss
@import 'src/variables';
@import 'bootstrap/scss/mixins/breakpoints';

.container {
  margin: 0;
  padding: 0;
  max-width: 800px;
  padding-block-end: 10px;
}

.mat-mdc-card {
  padding: 8px 4px;
}

.tool-setting {
  display: flex;
  flex-direction: column;
  row-gap: 16px;

  p {
    margin: 0;
  }

  > .checkbox-field {
    display: flex;
  }

  > .tool-setting-field {
    &:not(:last-child) {
      padding-bottom: 16px;
    }
    column-gap: 10px;

    > app-write-status {
      @include media-breakpoint-up(sm) {
        margin-inline-start: 22px;
      }
    }
  }

  > .helper-text {
    font-size: 14px;
    &.checkbox-helper-text {
      margin: 0 0 0 24px;
    }
  }
  .mat-mdc-form-field-error {
    margin-top: 10px;
    font-size: 14px;
    display: flex;

    app-info + span {
      margin-left: 6px;
    }
  }
}

a {
  color: $blueMedium;
}

mat-icon {
  color: $greyLight;
  overflow: visible;
}

.indent {
  margin-block-start: 4px;
  margin-inline-start: 16px;
  display: flex;
  column-gap: 8px;
  align-items: center;
}

#btn-log-in-settings {
  background-color: $pt-button-green;
  color: white;
  height: 40px;
}

.offline-text {
  padding-left: 16px;
}

.paratext-login-container {
  margin-top: 16px;
  margin-left: 24px;

  .paratext-logo {
    width: 24px;
    height: 24px;
    margin-right: 8px;
  }

  > .more-options {
    margin-left: 16px;
  }
}

.mat-mdc-checkbox {
  padding: 3px 0px;
}

::ng-deep .mat-mdc-checkbox .mdc-label {
  line-height: normal !important;
}

#delete-project {
  border: 2px solid red;
  .source-project-msg {
    color: red;
  }
}

// Use enabled class to work around changing styles while loading
#delete-btn:not(.enabled) {
  background-color: rgba(0, 0, 0, 0.12);
  color: rgba(0, 0, 0, 0.38);
}
#delete-btn:not(:disabled):hover {
  background-color: red;
}

mat-radio-group.tool-setting {
  mat-radio-button {
    margin-inline-start: 1em;
  }
}

.mat-mdc-card-content {
  display: flex;
  flex-direction: column;
  row-gap: 16px;
  margin: 0;
}

.mat-mdc-card-title {
  margin: 0;
}

.mat-mdc-card-content:not(:first-child) {
  padding-top: 32px;
}

.mat-mdc-card-content:not(:last-child) {
  padding-bottom: 32px;
}

.sharing-heading {
  font-weight: 500;
  margin-bottom: 0;
}

.card-content {
  padding: 24px;
  h4,
  p {
    margin-block-start: 0;
  }
}

